fix link overflow in main content

--- a/assets/stylesheets/css/master.css
+++ b/assets/stylesheets/css/master.css
@@ -91,6 +91,10 @@ h4 {
   font-size: 1.5rem;
 }
 
+a {
+  width: fit-content;
+}
+
 strong {
   font-weight: bold;
 }
